[package]
name = "raindrops"
version = "0.1.0"
authors = ["x72y5e <x72y5e@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
ndarray = "0.12.1"
ndarray-rand = "0.9.0"
rayon = "1.0.3"